[package]
name = "utube"
version = "0.1.0"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2018"
description = "utube"
license = "MPL-2.0"
repository = "https://github.com/morr0ne/utube"

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
neo-mime = { version = "0.1.1", features = ["serde"] }
regex = "1.5.3"
reqwest = { version = "0.11.3", features = ["brotli", "cookies", "gzip", "json", "trust-dns"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["float_roundtrip"] }
url = { version  = "2.2.1", features = ["serde"] }
