[package]
name = "utube"
version = "0.1.0"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2018"
description = "utube"
license = "MPL-2.0"
repository = "https://github.com/morr0ne/utube"

[dependencies]
anyhow = "1.0.41"
neo-mime = { version = "0.1.1", features = ["serde"] }
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["float_roundtrip"] }
url = { version  = "2.2.2", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11.3" }
tokio = { version = "1.7.0", features = ["full"] }