[package]
name = "utube"
version = "0.2.1"
authors = ["Matilde Morrone <contact@morrone.dev>"]
edition = "2018"
description = "utube"
license = "MPL-2.0"
repository = "https://github.com/morr0ne/utube"

[dependencies]
anyhow = "1.0.41"
lazy-regex = "2.2.1"
neo-mime = { version = "0.1.1", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["float_roundtrip"] }
url = { version  = "2.2.2", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.11.3" }
tokio = { version = "1.7.1", features = ["full"] }